--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                     </div>
                     <div class="text-box">
                         <h3>Nossa história</h3>
-                        <p> Nossa jornada começou em 2020 na temporada Ultimate Goal, onde nossa equipe possuia apenas 5 integrantes contra gigantes equipes brasileiras. passamos por diversos desafios de engenharia, programação na linguagem JAVA, trabalho em equipe, organização e documentação de tarefas, uma incrível iniciativa ao mercado de trabalho! </p>
+                        <p> Nossa jornada começou em 2020 na temporada Ultimate Goal, onde nossa equipe possuía apenas 5 integrantes contra gigantes equipes brasileiras. Passamos por diversos desafios de engenharia, programação na linguagem JAVA, trabalho em equipe, organização e documentação de tarefas, uma incrível iniciativa ao mercado de trabalho! </p>
                         <br>
-                        <p> Atualmente, estamos entre as melhores equipes do brasil competindo nacionalmente e internacionalmente. Com premiações nas áreas da utilização de software para melhor controle do robô, inovação da engenharia, trabalho em equipe e vencedora das disputas de arena. Tudo graças à dedicação e comprometimento de cada um!</p> 
+                        <p> Atualmente, estamos entre as melhores equipes do Brasil competindo nacionalmente e internacionalmente. Com premiações nas áreas da utilização de software para melhor controle do robô, inovação da engenharia, trabalho em equipe e vencedora das disputas de arena. Tudo graças à dedicação e comprometimento de cada um!</p> 
                     </div>
                 </div>
                 <div class="media-icons">
@@ -109,9 +109,9 @@
                     </div>
                     <div class="info">
                         <h4 class="info-title">Aqueles que fazem acontecer.</h4>
-                        <p>Utilizando estratégias de marketing, divulgação e administrativas, no início da temporada nossa equipe realizou um plano de patrocínio para nos conectarmos com empresas da nossa região e internacionais!</p>
+                        <p>Utilizando estratégias de marketing, divulgação e administrativas, no início da temporada nossa equipe realizou um plano de patrocínio para nos conectarmos com empresas internacionais e da nossa região!</p>
                         <br>
-                        <p>Através da participação de eventos como o HJ Conferente, Femix, Expo, conseguimos o nome de figuras muito importantes de diversos cenários, desde finanças até o agronegócio! Influenciadores como o Thiago Nigro em nome da Primo Rico, Havan, John Deere, entre outros! </p>
+                        <p>Através da participação de eventos como o HJ Conferente, Femix, Expo, conseguimos o nome de figuras muito importantes de diversos cenários, desde finanças até o agronegócio! Influenciadores como o Thiago Nigro em nome do Grupo Primo, Havan, John Deere, entre outros! </p>
                         <div class="logo">
                             <img src="images/johndeere.png" alt="img-john">
                         </div>
